<resources>
    <string name="app_name">MOBV</string>
    <string name="roll_dice">Roll dice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="user_name">Používateľské meno</string>
    <string name="add">Pridať</string>
    <string name="password">Heslo</string>
    <string name="log_in">Prihlásiť sa</string>
    <string name="sign_up">Registrovať sa</string>
    <string name="check_in">Check in</string>
    <string name="back">Späť</string>
    <string name="sort_by">Zoradiť podľa:</string>
    <string name="log_out">Odhlásiť</string>
    <string name="by_name">Mena</string>
    <string name="by_users">Návštevníkov</string>
    <string name="by_distance">Vzdialenosti</string>
    <string name="by_type">Typu</string>
    <string name="location">Location</string>
    <string name="friends">Friends</string>
    <string name="avatar">Avatar</string>
    <string name="add_friend">Add Friend</string>
    <string name="map">Map</string>

</resources>